--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <!-- Start coding here -->
+   <div class="box-1">
+    <h3>Welcome to CSS Color</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore ea, voluptate excepturi asperiores, recusandae optio veritatis dolorem numquam consequuntur rem eaque placeat dignissimos nulla illum nobis fugiat esse? Libero quos quasi debitis omnis delectus quis quae, adipisci alias, deleniti, nihil cumque voluptas temporibus ratione rem veritatis magni dolores officia mollitia Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet eius error aut, laborum officia et sequi nulla dolor libero dolorem fugit fuga blanditiis recusandae dolorum quidem iste quibusdam reprehenderit perspiciatis?</p>
+   </div>
 </body>
 
 </html>
